small changer lab1
changed the title a bit and added a newline to the text

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Це приклад веб-сторінки, створеної для навчання.
      студентом групи ІП-23 Табачуком Денисом.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ІП-23 Табачук Д.Л.</title>
+    <title>Табачук Д.Л. ІП-23 Л1 В1</title>
 </head>
 <body>
     <!-- 2. Створити 3 абзаци з інформацією про автора сторінки: -->
@@ -34,6 +34,7 @@
       <h3>Вподобане місто</h3>
      <p>Ки́їв — столиця та найбільше місто України.
         Розташований у середній течії Дніпра, у північній Наддніпрянщині.
+        <br>
         Політичний, соціально-економічний, транспортний, освітньо-науковий,
          історичний, культурний та духовний центр України.
      </p>
