lab2 table row colors
Minor changes in the colored rows of the table

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Приклад таблиці</title>
+    <title>Табачук Д.Л. ІП-23 Л1 В1</title>
 </head>
 <body>
 
@@ -16,19 +16,19 @@
             <td rowspan="2"></td>
             <td rowspan="2"></td>
         </tr>
-        <tr class = "row1">
+        <tr class = "row2">
             <td colspan="2">Леонідович</td>
         </tr>
 
     
 
-        <tr class = "row2">
+        <tr>
             <td colspan="2">ІП-23</td>
             <td colspan="2" rowspan="2">Лаб №2</td>
             <td colspan="2" rowspan="2">Варіант 1</td>
             <td colspan="2" rowspan="2"></td>
         </tr>
-        <tr class = "row2">
+        <tr>
             <td colspan="2"></td>
         </tr>
     </table>
