lab 3 link between pages
added link between pages in lab3

--- a/lab3/cola-flex-version.html
+++ b/lab3/cola-flex-version.html
@@ -19,6 +19,8 @@
                      (The Coca-Cola Company), яка його виробляє. Кока-колу винайшов американський фармацевт Джон Пембертон 8 травня 
                      1886 в Атланті як новий лікувальний напій.
                 </p>
+
+                <a href="sprite-float-version.html">До сторінки №2</a>
             </div>
         </div>
 
