--- a/lab3/sprite-float-version.html
+++ b/lab3/sprite-float-version.html
@@ -21,6 +21,7 @@
                 <p>
                     Sprite — газований безалкогольний напій, який випускає компанія «The Coca-Cola Company». Sprite Mint-смак який виходить з 2002 року у Болгарії.
                 </p>
+                <a href="cola-flex-version.html">До сторінки №1</a>
             </div>
         </div>
         <div id="column2">
