--- a/lab4/index.html
+++ b/lab4/index.html
@@ -7,7 +7,7 @@
      студентом групи ІП-23 Табачуком Денисом.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>ІП-23 Табачук Д.Л.</title>
+    <title>ІП-23 Табачук Д.Л. Л4 В1</title>
 </head>
 <body>
     <!-- 2. Створити 3 абзаци з інформацією про автора сторінки: -->
@@ -35,6 +35,7 @@
       <h3>Вподобане місто</h3>
      <p>Ки́їв — столиця та найбільше місто України.
         Розташований у середній течії Дніпра, у північній Наддніпрянщині.
+        <br>
         Політичний, соціально-економічний, транспортний, освітньо-науковий,
          історичний, культурний та духовний центр України.
      </p>
