--- a/lab6/index.html
+++ b/lab6/index.html
@@ -14,13 +14,13 @@
         </button>
     </div>
 
+    <h3 id = "status-field">Press the button to load users</h3>
 
-      
-    <div id="users-container">
+    <div class="wrapper">          
+        <div id="users-container">
+          
+        </div>
     </div>
-
-  
-
 
   <script src = "script.js"></script>
 </body>
