Changed title lab6

--- a/lab6/index.html
+++ b/lab6/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Табачук Д.Л. ІП-23 Лаб6 В1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
